@@ -1,9 +1,16 @@
 # Java Tips
 
 TOC
+- [Useful links](#useful_links)
+- [Code exchange](#code_exchange)
+    - Print properties to logs on start
+    - Scheduler in Spring
+- [Java 8](#java8)
+- [Microbenchmarking](#microbenchmarking)
+- [Migrating to 11](#migrating_to_11)
 
 
-## Useful links
+## Useful links <a name="useful_links"></a>
 
 https://howtodoinjava.com
 
@@ -16,7 +23,7 @@ JHipster Mini-Book
 https://www.programmableweb.com/
 
 
-## Code exchange
+## Code exchange <a name="code_exchange"></a>
 
 ### Print properties to logs on start
 
@@ -55,7 +62,7 @@ https://o7planning.org/en/11131/running-background-scheduled-tasks-in-spring
 */
 ```
 
-### Java 8
+## Java 8 <a name="java8"></a>
 
 Functional programming - Paradigmat of programming
 
@@ -93,8 +100,76 @@ List<String> collect = persons.stream()
 ```
 
 
-## Microbenchmarking
+## Microbenchmarking <a name="microbenchmarking"></a>
 
 https://www.baeldung.com/java-microbenchmark-harness
 
 https://openjdk.java.net/projects/code-tools/jmh/
+
+
+## Migrating to 11 <a name="migrating_to_11"></a>
+
+Java. Migrating to 11 in real app
+
+```
+bit.ly/DevoxxPL-J11
+http://przybyl.org/pres/2019/DevoxxPL-migrating2Java11/#/title-slide
+http://przybyl.org/pres/
+https://www.youtube.com/watch?v=hAbvZs6bJP8&list=PLEof0c3P_3KYAwHoGUTKMG15s205J_1rM&index=133&t=0s
+```
+
+```shell
+SDKMAN
+Upgrade IDE
+Upgrade build tools (and CI)
+Upgrade containers (if any)
+Upgrade all the (POM) dependencies
+Compile 8, try running 9? 10? 11!
+Add explicit dependencies (for java.se.ee)
+Test (and automate) like crazy in each step!
+```
+
+```shell
+Compile 11 (optional) try running 8
+-- illegal-access=debug/deny
+--add - [exports|opens|reads]
+
+What might happend:
+missing class
+illegal access
+
+Missing...
+Applet? CORBA? Soryy mate...
+javax. ... so: Replacements for deprecated
+JPMS modules with Java EE APIs
+Missing classes & methods - have you upgraded dependencies?
+Missing -XX parameters?
+
+Illegal Access
+--illegal-access=permit (like friend) | warn (like wife) | debug (every time and show always) | deny (father-in-law - where and end)
+
+Without modules:
+--add-exports
+--add-opens (aModule...)
+--add-modules
+--add-reads
+--patch-module
+
+All --classpath JARs end up in ALL-UNNAMED module
+
+[java --list-modules]
+
+Too many tuning options (close in files)
+javac @option-file1 ...
+```
+
+```shell
+git checkout java8 && sdk use java 8.0.192-zulu && .gradlew clean run
+git checkout java9 && sdk use java 9.0.4-open && .gradlew clean run
+```
+
+Java flight recorder
+
+and analyze in:
+
+Java Mission control
